deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: komiser
  namespace: namespace
  labels:
    animal: komiser
    part: komiser
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      animal: komiser
      part: komiser
  template:
    metadata:
      namespace: namespace
      labels:
        animal: komiser
        part: komiser
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
      containers:
        - name: komiser
          image: url_to_image/komiser:TAG
          ports:
            - containerPort: 9092
