deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komiser
  namespace: namespace
spec:
  ports:
    - name: http
      targetPort: 9092
      port: 80
  selector:
    animal: komiser
    part: komiser
